Fixed a bug that caused images to overflow from product cards

--- a/frontend-vite/src/index.css
+++ b/frontend-vite/src/index.css
@@ -3,7 +3,3 @@
 @plugin "daisyui" {
     themes: retro --default;
 }
-
-.inset-top-white-shadow {
-  box-shadow: inset 0 8px 16px -8px white;
-}
